# c_modular

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.cmd  cmod-test.pro  cmod.pro  cmod_test.pro  doxyfile  make_test.cmd  run_mem_chk.bat  run_test.cmd  test.cmd
source/: main.c  run.c  source.pro
source/cli_module/: cli_module.h
source/cli_module/private/: cli_process.c
source/common_module/: common_defs.h  common_module.h
source/common_module/private/: common_debug.c  common_module.c  common_private.h
source/exec_module/: exec_module.h
source/exec_module/private/: exec_loop.c  exec_main.c  exec_module.c
source/hal_module/: hal_module.h
source/hal_module/private/: hal_board.c
source/io_module/: io_module.h
source/io_module/private/: io_analog.c  io_digital.c  io_module.c
source_code/cli_module/private/: cli_process.c
source_code/common_module/: common_defs.h  common_module.h
source_code/common_module/private/: common_debug.c  common_module.c  common_private.h
source_code/exec_module/private/: exec_module.c
source_code/hal_module/private/: hal_board.c
source_code/io_module/private/: io_module.c
test/: hal_board_mock.c  hal_sim.c  hal_sim.h  main.cpp  pnut.cpp  pnut.h  run_mem_chk.bat  test.pro  test_all.cpp  test_cli.cpp  test_exec.cpp  test_io.cpp  test_main.cpp
test_code/: hal_board_mock.c  hal_board_mock.h  main.c
